--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <title>Bet Full Stack</title>
 
 </head>
@@ -14,7 +14,7 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-info">
-    <a class="navbar-brand" href="#"><img id="hlogo" src="/assets/images/LogoMakr-58DynD.png"></a>
+    <a class="navbar-brand" href="#"><img id="hlogo" src="./assets/images/LogoMakr-58DynD.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -144,28 +144,28 @@
         <section class="imgtv">
           <div class="PC">
             <a href="https://www.peacocktv.com/sports/premier-league?cid=20200620premierleaguepaidsearch610&utm_medium=paid_search_na_searchcopy&utm_campaign=20200620premierleague&utm_content=58700006164329356_44700031696119834&gclsrc=aw.ds&&gclid=Cj0KCQjwutaCBhDfARIsAJHWnHvAJXLIL_33FY2-223q-i09ol80s22g0IbvH58InYOoa8Kj0Lzl2eMaAk1nEALw_wcB">
-             <img src="/assets/images/Peacock.png" alt="Peacock"/>
+             <img src="./assets/images/Peacock.png" alt="Peacock"/>
             </a>
           </div>
         </section>
         <section class="imgtv">
           <div class="NBC">
             <a href="https://www.nbcsports.com/live/premier-league">
-              <img src="/assets/images/NBCS.png" alt="NBC Sports"/>
+              <img src="./assets/images/NBCS.png" alt="NBC Sports"/>
               </a>
           </div>
         </section>
         <section class="imgtv">
           <div class="Fubo">
             <a href="https://www.fubo.tv/lp/watch-premier-league/?title=Watch%20Premier%20League%20on%20NBC%20and%20NBCSN&ftv_campaign=USA-SEM-Sports-Soccer-League-EPL&gclid=Cj0KCQjwutaCBhDfARIsAJHWnHuE-PBN4qPrcLO9cM57C1nHxiNoq2pKQdJwFyF7HO0LsolWKLCdoykaAozvEALw_wcB">
-              <img src="/assets/images/Fubo.png" alt="Fubo"/>
+              <img src="./assets/images/Fubo.png" alt="Fubo"/>
             </a>
           </div>
         </section>
         <section class="imgtv">
           <div class="Sling">
             <a href="https://www.sling.com/programming/sports/soccer">
-             <img src="/assets/images/Sling.png" alt="Sling"/>
+             <img src="./assets/images/Sling.png" alt="Sling"/>
             </a>
           </div>
         </section>
@@ -212,8 +212,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
-  <script src="/assets/js/football-api-calls.js"></script>
-  <script src="/assets/js/highlights.js"></script>
+  <script src="./assets/js/football-api-calls.js"></script>
+  <script src="./assets/js/highlights.js"></script>
 </body>
 
 </html>
