--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/style.css">
   <title>Bet Full Stack</title>
 
@@ -77,7 +77,7 @@
   </div>
   <div class="card" style="width: 100%;">
     <div class="card-body">
-      <h5 class="card-title">What do experts say?</h5>
+      <h5 class="card-title">What do the Experts say?</h5>
       <div class="row">
         <div class="column">
           <div class="card"><a
@@ -100,7 +100,7 @@
   </div>
   <div class="one-card" style="width: 100%;">
     <div class="card-body">
-      <h5 class="card-title">Premier League highlights</h5>
+      <h5 class="card-title">Premier League Highlights</h5>
       <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/L6JebqqZbMg" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe> -->
@@ -112,7 +112,7 @@
   </div>
   <div class="two-card" style="width: 100%;">
     <div class="card-body">
-      <h5 class="card-title">Where to make money</h5>
+      <h5 class="card-title">Where to Make the Money</h5>
       <div class="row">
         <div class="column">
           <div class="card">
@@ -126,12 +126,12 @@
         </div>
         <div class="column">
           <div class="card">
-            <a href="https://sportsbook.draftkings.com/leagues/soccer/53591936?category=game-lines&subcategory=money-line-(regular-time)">DraftKings</a>
+            <a href="https://sportsbook.draftkings.com/leagues/soccer/53591936?category=game-lines&subcategory=money-line-(regular-time)">Draft Kings</a>
           </div>
         </div> 
         <div class="column">
           <div class="card">
-            <a href="https://www.freesupertips.com/predictions/premier-league/">Free Super Tips</a>
+            <a href="https://www.nj.bet365.com/#/AC/B1/C1/D13/E51761579/F2/">Bet365</a>
           </div>
         </div>
       </div>
@@ -139,7 +139,7 @@
 </div>
   <div class="three-card" style="width: 100%;">
     <div class="card-body">
-      <h5 class="card-title">Where to see it live</h5>
+      <h5 class="card-title">Where to See it Live</h5>
       <main class ="imgtvContainer">
         <section class="imgtv">
           <div class="PC">
