Added Footer from Juan

--- a/index.html
+++ b/index.html
@@ -187,21 +187,65 @@
             src="https://images.daznservices.com/di/library/GOAL/c1/9b/liverpool-manchester-united-most-trophies_xq4hoizsmosp1if3a2pu6d6vr.png?t=-1130491380&amp;quality=60&amp;w=1600"
             alt="rivals holding up cups">
           <a id="hlogo" href="https://www.manutd.com/" class="card-link">Manchester United</a>
-          <p>Here we see them heationg up in a argument in intense competition!</p>
+          <p>Here we see them heating up in an argument in intense competition!</p>
           <a href="https://youtu.be/h8OI5lTUUKE">
           <img id="argumentimg"
             src="https://media.bleacherreport.com/f_auto,w_800,h_533,q_auto,c_fill/br-img-images/002/093/760/hi-res-152626277_crop_north.jpg"
-            alt="heated argument"><br>Click imag to see how heated it gets</a>
+            alt="heated argument"><br>Click image to see how heated it gets</a>
     </div>
   </div>
   <!--cards from getbootstrap.com-->
 
-
-
-
-
-
-
+  <!-- Footer -->
+  <footer class=“bg-info text-center text-lg-start”>
+    <!-- Grid container -->
+    <div class=“container p-4">
+      <!--Grid row-->
+      <div class=“row”>
+        <!--Grid column-->
+        <div class=“col-lg-6 col-md-12 mb-4 mb-md-0">
+          <h5 class=“text-uppercase text-white”>Bet Fullstack</h5>
+          <p class=“text-white”>
+            We loved working on this website for you! We, as a collaborative effort, have put together a hub for all your
+            Premier League info. You can see upcoming games, highlights from past week, links to gambling sites, and
+            places to get tips. There is also a rivalry section.
+          </p>
+        </div>
+        <!--Grid column-->
+        <!--Grid column-->
+        <div class=“col-lg-3 col-md-6 mb-4 mb-md-0”>
+          <h5 class=“text-uppercase mb-0 text-white”>The Team</h5>
+          <ul class=“list-unstyled”>
+            <li>
+              <a href=“https://github.com/Amazonash” class=“text-white”>Ashley Gonzalez</a>
+            </li>
+            <li>
+              <a href=“https://github.com/ChristineOz” class=“text-white”>Christine Osmak</a>
+            </li>
+            <li>
+              <a href=“https://github.com/John-Mancini” class=“text-white”>John Mancini</a>
+            </li>
+            <li>
+              <a href=“https://github.com/kvaden19” class=“text-white”>Kelly Vaden</a>
+            </li>
+            <li>
+              <a href=“https://github.com/thereal-baitjet” class=“text-white”>Juan Santos</a>
+            </li>
+          </ul>
+        </div>
+        <!--Grid column-->
+      </div>
+      <!--Grid row-->
+    </div>
+    <!-- Grid container -->
+    <!-- Copyright -->
+    <div class=“text-center p-3" style=“background-color: white;“>
+      © 2021 Copyright:
+      <a class=“text-dark” href=“https://github.com/thereal-baitjet/bet-fullstack”>Bet Fullstack</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
+  <!-- Footer -->
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
