--- a/index.html
+++ b/index.html
@@ -230,19 +230,19 @@
 
           <ul class="list-unstyled">
             <li>
-              <a href=“https://github.com/Amazonash” class=“text-white”>Ashley Gonzalez</a>
+              <a href="https://github.com/Amazonash" class="text-white" >Ashley Gonzalez</a>
             </li>
             <li>
-              <a href=“https://github.com/ChristineOz” class=“text-white”>Christine Osmak</a>
+              <a href="https://github.com/ChristineOz" class="text-white">Christine Osmak</a>
             </li>
             <li>
-              <a href=“https://github.com/John-Mancini” class=“text-white”>John Mancini</a>
+              <a href="https://github.com/John-Mancini" class="text-white">John Mancini</a>
             </li>
             <li>
-              <a href=“https://github.com/kvaden19” class=“text-white”>Kelly Vaden</a>
+              <a href="https://github.com/kvaden19" class="text-white">Kelly Vaden</a>
             </li>
             <li>
-              <a href=“https://github.com/thereal-baitjet” class=“text-white”>Juan Santos</a>
+              <a href="https://github.com/baitjet" class="text-white">Juan Santos</a>
             </li>
           </ul>
         </div>
@@ -255,7 +255,7 @@
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: white;">
       © 2020 Copyright:
-      <a class=“text-dark” href=“https://github.com/thereal-baitjet/bet-fullstack”>Bet fullstack</a>
+      <a class="text-dark" href="https://github.com/thereal-baitjet/bet-fullstack">Bet fullstack</a>
     </div>
     <!-- Copyright -->
   </footer>
